# forza-color-repo

./: .audit.json  .audit_after.json  .env.local.example  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .tmp_location_audit.js  .tmp_type_gap.js  .vercelignore  AGENT_SPECIFICATION.md  App.tsx  BUILD_FIX_SUMMARY.md  CAR_DATA_USAGE.md  CHANGELOG.md  CLAUDE.md  CLOUD_ENDPOINT_GUIDE.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  Copy of forza tune database.txt  ENHANCEMENTS_COMPLETE.md  ERROR_ANALYSIS.md  FEATURE_ROADMAP.md  FH5_DATA_MIGRATION_SUMMARY.md  FORZA_PAINTING_GUIDE_COMPLETE.md  FORZA_TUNING_GUIDE_COMPLETE.md  Forza Colour Sheet (Est. 2019) - Vehicle Colours.txt  Forza Colour Sheet (Est. 2019) - Wheel Colours.txt  Forza Horizon 5 Color Sheet - Aftermarket Color.txt  Forza Horizon 5 Color Sheet - Body Color.txt  Forza Horizon 5 Color Sheet - Brake Caliper.txt  Forza Horizon 5 Color Sheet - One of a kind body color.txt  Forza Horizon 5 Color Sheet - VIP Body Color.txt  Forza Horizon 5 Color Sheet - Wheel.txt  Forza Horizon 5 Color Sheet-31.txt  IMAGE_COLOR_MATCHING.md  LEARNING_GUIDE.md  LOCATION_FINDER_REBUILD.md  MAPGENIE_EXTRACTION_GUIDE.md  ManteoMax_Cars.txt  (+106 more)
.Jules/: palette.md
.agents/: accessibility_implementation_report.md  task.md
.amazonq/: settings.json
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.jules/: bolt.md
.lighthouseci/: lhr-1781550289198.html  lhr-1781550289198.json  lhr-1781550304824.html  lhr-1781550304824.json  lhr-1781550318767.html  lhr-1781550318767.json
.mcp/: config.json
src-tauri/: Cargo.toml  tauri.conf.json
(+1179 files in other folders)
